force-app/main/default/objects/AV_Workday__c/AV_Workday__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene los horarios de los empleados.</description>
    <label>Jornada Laboral</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Jornada Laboral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jornada Laboral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>