force-app/main/default/objects/AV_Workday__c/fields/AV_ArrivalTime2__c.field-meta.xml
<CustomField>
    <fullName>AV_ArrivalTime2__c</fullName>
    <description>Hora de entrada 2</description>
    <label>Hora entrada 2</label>
    <type>Time</type>
</CustomField>