force-app/main/default/objects/AV_Workday__c/fields/AV_Empleado__c.field-meta.xml
<CustomField>
    <fullName>AV_Empleado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact (Empleado)</relationshipLabel>
    <relationshipName>Empleado</relationshipName>
    <type>Lookup</type>
</CustomField>