force-app/main/default/objects/AV_Workday__c/fields/AV_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>AV_ExternalId__c</fullName>
    <description>Identificación Caixabank</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>