force-app/main/default/objects/AV_Workday__c/fields/AV_PresentAbsentIndicator__c.field-meta.xml
<CustomField>
    <fullName>AV_PresentAbsentIndicator__c</fullName>
    <description>Indicador para saber si está presente o ausente.</description>
    <label>Indicador presente/ausente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Ausente</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Baja</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Presente</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Festivo</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Teletrabajo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>