force-app/main/default/objects/AV_Workday__c/recordTypes/AV_Workday.recordType-meta.xml
<RecordType>
    <fullName>AV_Workday</fullName>
    <active>true</active>
    <label>Workday</label>
</RecordType>